packages/parser/test/parser/E0142.txt
a: (int, a: ) -> void {}
===== err =====
anonymous:1:12: ParseError: E0142 - Expected function type parameter type after colon
1 | a: (int, a: ) -> void {}
  |            ^
